2024-08-14 Roy Hills <royhills@hotmail.com>

	* get-iab: removed. This script is no longer needed and was depreciated
	  in arp-scan 1.10.
	  https://github.com/royhills/arp-scan/pull/184

	* ieee-oui.txt: Updated from IEEE registry. Total of 52119 MAC/Vendor
	  mappings (4575 IAB + 5461 MAM + 35971 OUI + 6112 OUI36).
	  https://github.com/royhills/arp-scan/pull/185

2024-03-29 Roy Hills <royhills@hotmail.com>

	* arp-fingerprint: Added recent Windows and FreeBSD patterns.

2024-01-10 Roy Hills <royhills@hotmail.com>

	* arp-scan.c: Use printf() instead of warn_msg() for the "Target list
	  from interface" message so the output is sent to stdout instead of
	  stderr.

2024-01-04 Roy Hills <royhills@hotmail.com>

	* configure.ac, README.md: Require C compiler with C99 language support.
	  configure will exit with the error message "C compiler does not
	  support C99 standard" if C99 support is not present.
	  arp-scan currently uses C89 but use of C99 features is planned for
	  the next release.
	  https://github.com/royhills/arp-scan/pull/171

	* arp-scan.c: flush stdout output buffer after displaying each response.
	  This ensures that responding hosts are seen immediately when reading
	  from a pipeline rather than having to wait until the output buffer
	  is filled.
	  https://github.com/royhills/arp-scan/pull/172

	* Update copyright date for applicable files.
	  https://github.com/royhills/arp-scan/pull/173

	* ieee-oui.txt: Updated from IEEE registry. Total of 50366 MAC/Vendor
	  mappings (4575 IAB + 5121 MAM + 34879 OUI + 5791 OUI36).
	  https://github.com/royhills/arp-scan/pull/174

	* configure.ac, arp-scan.h: include <stdint.h> unconditionally and
	  remove autoconf checks for fixed width integer types now we can
	  assume C99 support. Removed include <sys/types.h> because <unistd.h>
	  makes it unnecessary.
	  https://github.com/royhills/arp-scan/pull/175

2023-10-22 Roy Hills <royhills@hotmail.com>
