@@ -1,9 +1,10 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_INIT([arp-scan],[1.10.1-git],[https://github.com/royhills/arp-scan])
-AC_PREREQ([2.69])
+AC_PREREQ([2.70])
 AC_CONFIG_SRCDIR([arp-scan.c])
 AC_CONFIG_AUX_DIR([build-aux])
+AC_CONFIG_MACRO_DIRS([m4])
 AM_INIT_AUTOMAKE
 
 AC_CONFIG_HEADERS([config.h])
