@@ -1,0 +1,53 @@
+dnl Useful macros for autoconf to check for ssp-patched gcc
+dnl 1.0 - September 2003 - Tiago Sousa <mirage@kaotik.org>
+dnl
+dnl Modified by ffontaine pull request: use AC_LINK_IFELSE instead of
+dnl AC_COMPILE_IFELSE because some systems may be missing the libssp library
+dnl even though the compiler accepts the option.
+dnl
+dnl About ssp:
+dnl GCC extension for protecting applications from stack-smashing attacks
+dnl http://www.research.ibm.com/trl/projects/security/ssp/
+dnl
+dnl Usage:
+dnl After calling the correct AC_LANG_*, use the corresponding macro:
+dnl
+dnl GCC_STACK_PROTECT_CC
+dnl checks -fstack-protector with the C compiler, if it exists then updates
+dnl CFLAGS and defines ENABLE_SSP_CC
+dnl
+dnl GCC_STACK_PROTECT_CXX
+dnl checks -fstack-protector with the C++ compiler, if it exists then updates
+dnl CXXFLAGS and defines ENABLE_SSP_CXX
+dnl
+AC_DEFUN([GCC_STACK_PROTECT_CC],[
+  ssp_cc=yes
+  if test "X$CC" != "X"; then
+    AC_MSG_CHECKING([whether ${CC} accepts -fstack-protector])
+    ssp_old_cflags="$CFLAGS"
+    CFLAGS="$CFLAGS -fstack-protector"
+    AC_LINK_IFELSE([AC_LANG_PROGRAM([[]], [[]])],[],[ssp_cc=no])
+    echo $ssp_cc
+    if test "X$ssp_cc" = "Xno"; then
+      CFLAGS="$ssp_old_cflags"
+    else
+      AC_DEFINE([ENABLE_SSP_CC], 1, [Define if SSP C support is enabled.])
+    fi
+  fi
+])
+
+AC_DEFUN([GCC_STACK_PROTECT_CXX],[
+  ssp_cxx=yes
+  if test "X$CXX" != "X"; then
+    AC_MSG_CHECKING([whether ${CXX} accepts -fstack-protector])
+    ssp_old_cxxflags="$CXXFLAGS"
+    CXXFLAGS="$CXXFLAGS -fstack-protector"
+    AC_LINK_IFELSE([AC_LANG_PROGRAM([[]], [[]])],[],[ssp_cxx=no])
+    echo $ssp_cxx
+    if test "X$ssp_cxx" = "Xno"; then
+        CXXFLAGS="$ssp_old_cxxflags"
+    else
+      AC_DEFINE([ENABLE_SSP_CXX], 1, [Define if SSP C++ support is enabled.])
+    fi
+  fi
+])
